--- a/Aplicacao_Producao/requirements.txt
+++ b/Aplicacao_Producao/requirements.txt
@@ -1,4 +1,5 @@
 pandas==2.2.2
 scikit-learn==1.2.2
+openpyxl==3.1.2
 # Não põe a streamlit, pq vamos implantar no streamlit e dá erro se colocarmos a bilbioteca aqui
 # e nem pickle e datetime, pois já são nativas do pyhton. Não instalamos
